# qwen-studio

./: .gitignore  .prettierignore  .prettierrc  ARCHITECTURE.md  MACOS_FINDINGS.md  MCP-SETUP.md  README.md  WINDOWS_INVESTIGATION.md  WINDOWS_INVESTIGATION_COMPLETE.md  WINDOWS_INVESTIGATION_FINDINGS.md  electron-builder.yml  forge.config.ts  package-lock.json  package.json  qwen-studio.desktop  tsconfig.json  vitest.config.ts
.husky/: pre-commit
MEMORY/: .gitignore  QUICK_REFERENCE.md  README.md  entities.md  log.md  schema.md  working-context.md
MEMORY/events/2026-05-15/: memory-system-setup.md
MEMORY/facts/qwen-studio/: architecture.md  version.md
MEMORY/schema/: decision.schema.yaml  event.schema.yaml  fact.schema.yaml  insight.schema.yaml  predicates.yaml  version.yaml
docs/: AGENT_BRAIN.md  AGENT_CHEATSHEET.md  ARCHITECTURE.md  LINUX_WEBKITGTK_FIX.md  MCP_DOMAIN_ANALYSIS.md  NPM_PACKAGE.md  OFFICIAL_APP_ANALYSIS.md  PARENT_ID_ERROR_STUDY.md  SECURITY_AUDIT.md
src-tauri/: Cargo.toml  electron-bridge.js  mcp-bridge.js  mcp-bridge.mjs  mcp-proxy-server.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: mcp.toml
src-tauri/src/: dialogs.rs  events.rs  lib.rs  mcp.rs  settings.rs  window.rs
src/main/: app-lifecycle.ts  index.ts  ipc-handlers.ts  logger.ts  mcp-config.ts  qwen-core-autoconfig.ts  runtime.ts  settings.ts  skills-manager.ts  updater.ts  window-manager.ts
src/mcp/: index.ts  proxy.ts  server-client.ts
src/preload/: index.ts
src/renderer/: bridge.js  index.html
src/shared/: types.ts
(+3 files in other folders)
