[package]
name = "qwen-studio"
version = "2.2.0"
description = "Open-source Qwen AI desktop client with MCP support"
authors = ["youssefvdel"]
license = "MIT"
repository = "https://github.com/youssefvdel/qwen-studio"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"
url = "2.5"
open = "5.3"
